<resources>
    <string name="app_name">Family Map</string>
    <string name="firstName">First Name:</string>
    <string name="firstNamePerson">First Name</string>
    <string name="lastName">Last Name:</string>
    <string name="lastNamePerson">Last Name</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>
    <string name="password">Password:</string>
    <string name="username">User Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="loginButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>
    <string name="radioButtonMale">Male</string>
    <string name="radioButtonFemale">Female</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_example">MapsActivityExample</string>
    <string name="click_on_a_marker_to_see_event">Click on a marker to see event</string>
    <string name="details">details</string>
    <string name="icon">IconHere</string>
    <string name="eventUser">%1$s %2$s</string>
    <string name="eventDetails">%1$s: %2$s, %3$s (%4$d)</string>
    <string name="genderPerson">Gender</string>
    <string name="eventTitle">Life Events</string>
    <string name="familyTitle">Family</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="logout">Logout</string>
    <string name="return_to_login_screen">RETURN TO LOGIN SCREEN</string>
    <string name="filter_events_based_on_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>
    <string name="male_events">Male Events</string>
    <string name="filter_by_mother_s_side_of_family">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="filter_by_father_s_side_of_family">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="father_s_side">Father\'s Side</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="search_menu">searchMenu</string>
    <string name="settings_menu">settings menu</string>
    <string name="back_arrow_menu">back arrow menu</string>
</resources>